k8s/removed/netbootxyz/custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbootxyz
  namespace: default
  labels:
    app: netbootxyz
spec:
  selector:
    matchLabels:
      app: netbootxyz
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: netbootxyz
    spec:
      # initContainers:
      #   - name: copyconfig
      #     image: busybox
      #     command:
      #       - "sh"
      #       - "-c"
      #       - |
      #         if [ ! -f /opt/netbootxyzhome/conf/netbootxyzHome.yaml ]; then
      #           mkdir -p /opt/netbootxyzhome/conf
      #           ls /sourceconf
      #           cp /sourceconf/netbootxyzHome.yaml /opt/netbootxyzhome/conf/netbootxyzHome.yaml
      #           ls /opt/netbootxyzhome/conf
      #         fi
      #     volumeMounts:
      #       - name: configmap
      #         mountPath: /sourceconf
      #       - name: config
      #         mountPath: /opt/netbootxyzhome/conf
      containers:
        - name: netbootxyz
          image: ghcr.io/linuxserver/netbootxyz:latest@sha256:069d4a417d550746264ad9ddd5d3a14b6c3de447934ad3416609f2f760ca2e38
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
            - containerPort: 80
            - containerPort: 69
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbootxyz-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - netbootxyz.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: netbootxyz.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbootxyz
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: netbootxyz
spec:
  selector:
    app: netbootxyz
  type: LoadBalancer
  loadBalancerIP: 192.168.100.249
  ports:
    - name: assets
      port: 8080
      targetPort: 80
      protocol: TCP
    - name: tftp
      port: 69
      targetPort: 69
      protocol: UDP
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
